# code-of-PD

./: .gitignore  README.md  code.ipynb  pyproject.toml
Nanosecond_Pulse_Time_Series_Analysis-main/: .gitignore  analysis.py  analysis_multi.py
Other code/: Other code.ipynb
Wang-code/: Pelt+TimeSeriesKMedoids.ipynb  data.xlsx
data set/党/: 党-电势数据.xlsx
data set/力/: 力-静电数据.xlsx
data set/叶/: 叶-泄漏电流数据.xlsx
data set/奇/: 奇-电势数据.xlsx
data set/强/: 强-凝冰数据.xlsx
data set/汪/: 汪-电荷动能感知数据.xlsx
data set/秦/: 秦-能量收集数据.xlsx
data set/蒙/: 蒙-频率数据.xlsx
data set/贾/: 贾-振动数据.xlsx
data set/韩/: 韩-极化数据.xlsx
